# enterprise-iam-guardrails

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  THREAT_MODEL.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
src/iam_guardrails/: __init__.py  cli.py  findings.py
src/iam_guardrails/ai_workloads/: __init__.py  checks.py
src/iam_guardrails/scp/: __init__.py  schema.py  validator.py
src/iam_guardrails/trust_policy/: __init__.py  analyzer.py
tests/: conftest.py  test_ai_workload_checks.py  test_cli.py  test_live_scan.py  test_scp_validator.py  test_trust_policy_analyzer.py
tests/fixtures/: ai_policy_broad.json  ai_policy_scoped.json  scp_deny_all.json  scp_invalid.json  scp_valid.json  trust_external_with_condition.json  trust_specific_role.json  trust_wildcard.json
