[project]
name = "iam-guardrails"
version = "0.1.0"
description = "Offline-first analysis of AWS IAM guardrails: SCPs, role trust policies, and AI/ML workload permissions."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [{ name = "SentinelByte" }]
dependencies = ["boto3>=1.34", "jsonschema>=4.21"]

[project.scripts]
iam-guardrails = "iam_guardrails.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "moto[iam,sts]>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    "bandit>=1.7",
    "boto3-stubs[iam,sts]>=1.34",
    "types-jsonschema>=4.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iam_guardrails"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=iam_guardrails --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["tests/"]

[tool.bandit]
exclude_dirs = ["tests"]
